# geometry3d

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.txt  crates.js  help.html  index.html  index.md  pre_commit.sh  search-index.js  settings.html  source-files.js  test_coverage.sh
.github/workflows/: build.yaml  build.yml  coverage.yaml  docs.yaml  style.yaml  test.yaml  tests.yaml
benches/: benchmark.rs
geometry3d/: all.html  constant.PI.html  enum.BBoxAxis.html  enum.PointInTriangle.html  enum.SurfaceSide.html  index.html  macro.gamma!.html  macro.gamma.html  sidebar-items.js  struct.BBox3D.html  struct.Cylinder3D.html  struct.Disk3D.html  struct.DistantSource3D.html  struct.IntersectionInfo.html  struct.Loop3D.html  struct.Plane3D.html  struct.Point3D.html  struct.Polygon3D.html  struct.Ray3D.html  struct.Segment3D.html  struct.Sphere3D.html  struct.Transform.html  struct.Triangle3D.html  struct.Triangulation3D.html  struct.Vector3D.html  type.Float.html  type.RefCount.html
geometry3d/bbox3d/: enum.BBoxAxis.html  fn.get_mins_maxs.html  index.html  sidebar-items.js  struct.BBox3D.html
geometry3d/bound_trait/: index.html  trait.Bounded.html
geometry3d/cylinder3d/: index.html  sidebar-items.js  struct.Cylinder3D.html
geometry3d/disk3d/: index.html  (+2 more)
src/: bbox3d.rs  bound_trait.rs  cylinder3d.rs  disk3d.rs  distant_source3d.rs  intersect_trait.rs  intersection.rs  intersection_no_texture.rs  intersection_texture.rs  lib.rs  loop3d.rs  plane3d.rs  point3d.rs  polygon3d.rs  quick_inverse_sqrt.rs  ray3d.rs  round_error.rs  segment3d.rs  sphere3d.rs  transform.rs  triangle3d.rs  triangulation3d.rs  utils.rs  vector3d.rs
test_data/: empty.md
(+125 files in other folders)
