[package]
name = "geometry3d"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
path = "./benches/benchmark.rs"
harness = false


[features]
default = []
float = []
parallel = []