[package]
name = "geometry3d"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true
codegen-units = 1
debug=true


[dev-dependencies]
criterion = "0.3"
rand = {version = "0.8.4"}

[[bench]]
name = "benchmark"
path = "./benches/benchmark.rs"
harness = false


[features]
default = []
float = []
parallel = []
textures = []
quick_inv_sqrt = []